--- a/css/style.css
+++ b/css/style.css
@@ -398,9 +398,10 @@ h1, h2, h3, h4, h5, h6, figure {
   transform: scale(1.2);
 }
 
+/*ABAIXO CONFIGS TAMANHO BANNER HOMEPAGE*/
 .gtco-cover {
   height: 900px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   position: relative;
   float: left;
