--- a/sass/style.scss
+++ b/sass/style.scss
@@ -832,10 +832,10 @@ h1, h2, h3, h4, h5, h6, figure {
 					content: "\e9da";
 				}
 			}
-			&.url {
+			&.icon-instagram {
 				&:before {
 					font-size: 23px;
-					content: "\e9af";
+					content: "\ea6f";
 				}
 			}
 		}
