--- a/css/style.css
+++ b/css/style.css
@@ -400,11 +400,11 @@ h1, h2, h3, h4, h5, h6, figure {
 
 /*ABAIXO CONFIGS TAMANHO BANNER HOMEPAGE*/
 .gtco-cover {
-  height: 900px;
-  background-size: contain;
-  background-repeat: no-repeat;
+  height: 500px;
+  margin-top: -200px;
+  background-size: 100%;
+  /*  background-repeat: no-repeat;  */
   position: relative;
-  float: left;
   width: 100%;
 }
 .gtco-cover a {
