--- a/css/style.css
+++ b/css/style.css
@@ -497,8 +497,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #gtco-about,
 #gtco-practice-areas,
-#gtco-our-team,
-#gtco-contact {
+#gtco-our-team {
   padding: 7em 0;
   clear: both;
 }
